Project

General

Profile

Actions

Bug #37091

closed

multisite: bilog trimming crashes when pgnls fails with EINVAL

Added by Casey Bodley over 5 years ago. Updated about 3 years ago.

Status:
Resolved
Priority:
High
Assignee:
Target version:
-
% Done:

0%

Source:
Q/A
Tags:
multisite
Backport:
luminous mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

    -1> 2018-11-11 12:30:42.734016 7f201efe0700  1 -- xx.xx.x.xx:0/2047487417 <== osd.21 xx.xx.x.xx:6824/6128 31778 ==== osd_op_reply(341086  [pgnls start_epoch 91779] v91770'16234 uv8074 ondisk = -22 ((22) Invalid argument)) v8 ==== 144+0+0 (2266104688 0 0) 0x55e16052a840 con 0x55e104599800
     0> 2018-11-11 12:30:42.736408 7f2013fca700 -1 *** Caught signal (Aborted) **
 in thread 7f2013fca700 thread_name:rados_async

 ceph version 12.2.5-59.el7cp (d4b9f17b56b3348566926849313084dd6efc2ca2) luminous (stable)
 1: (()+0x1fbc21) [0x55e103133c21]
 2: (()+0xf5d0) [0x7f20311405d0]
 3: (gsignal()+0x37) [0x7f2025be3207]
 4: (abort()+0x148) [0x7f2025be48f8]
 5: (__gnu_cxx::__verbose_terminate_handler()+0x165) [0x7f20264f27d5]
 6: (()+0x5e746) [0x7f20264f0746]
 7: (()+0x5e773) [0x7f20264f0773]
 8: (()+0x5e993) [0x7f20264f0993]
 9: (librados::NObjectIteratorImpl::get_next()+0x20b) [0x7f203209128b]
 10: (librados::NObjectIteratorImpl::seek(librados::ObjectCursor const&)+0x1e) [0x7f203209138e]
 11: (librados::IoCtx::nobjects_begin(librados::ObjectCursor const&, ceph::buffer::list const&)+0x58) [0x7f203209ec78]
 12: (librados::IoCtx::nobjects_begin(librados::ObjectCursor const&)+0x78) [0x7f203209ed28]
 13: (RGWRados::pool_iterate_begin(rgw_pool const&, std::string const&, RGWPoolIterCtx&)+0x68) [0x55e1032549f8]
 14: (RGWRados::list_raw_objects_init(rgw_pool const&, std::string const&, RGWListRawObjsCtx*)+0x64) [0x55e103254be4]
 15: (RGWBucketInstanceMetadataHandler::list_keys_init(RGWRados*, std::string const&, void**)+0x66) [0x55e1031537b6]
 16: (RGWMetadataManager::list_keys_init(std::string const&, std::string const&, void**)+0x6d) [0x55e1031ae1ed]
 17: (AsyncMetadataList::_send_request()+0x60) [0x55e103416990]
 18: (RGWAsyncRadosProcessor::handle_request(RGWAsyncRadosRequest*)+0x22) [0x55e1031cf882]
 19: (RGWAsyncRadosProcessor::RGWWQ::_process(RGWAsyncRadosRequest*, ThreadPool::TPHandle&)+0xd) [0x55e1031cf94d]
 20: (ThreadPool::worker(ThreadPool::WorkThread*)+0xa8e) [0x7f202872514e]
 21: (ThreadPool::WorkThread::entry()+0x10) [0x7f2028726070]
 22: (()+0x7dd5) [0x7f2031138dd5]
 23: (clone()+0x6d) [0x7f2025caaead]

Related issues 2 (0 open2 closed)

Copied to rgw - Backport #37475: luminous: multisite: bilog trimming crashes when pgnls fails with EINVALResolvedCasey BodleyActions
Copied to rgw - Backport #37476: mimic: multisite: bilog trimming crashes when pgnls fails with EINVALRejectedActions
Actions #1

Updated by Casey Bodley over 5 years ago

  • Status changed from In Progress to Fix Under Review
Actions #2

Updated by Abhishek Lekshmanan over 5 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #37475: luminous: multisite: bilog trimming crashes when pgnls fails with EINVAL added
Actions #4

Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #37476: mimic: multisite: bilog trimming crashes when pgnls fails with EINVAL added
Actions #5

Updated by Nathan Cutler about 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF