rgw: pool_iterate[_begin] catches NObjectIterator exceptions

Fixes: http://tracker.ceph.com/issues/37091

Signed-off-by: Casey Bodley <cbodley@redhat.com>